# heapstat

./: .gitignore  HeapStat.cpp  Makefile.in  MemorySpace.cpp  MemorySpace.h  ProcService.cpp  ProcService.h  README  configure  configure.in  heapstat.c  heapstat.h  heapstat_main.c  main.cpp  note.txt  wrapper_main.cpp  xheapstat.cpp
heapstat-test/: Makefile.in  astest.c  heapstat_unittest.cpp  leak.c  leaktest.sh  plibtest.c  small.c
heapstat-test/gtest/: Makefile.in
heapstat-test/gtest/src/.deps/: gtest-all.Plo  gtest_main.Plo
include/: README  mallint.h
