AC_INIT([heapstat], [0.1.0], [admin2@whiteboard.ne.jp])
AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL

AC_ARG_ENABLE([64bit],
   [  --disable-64bit         disable build of 64-bit driver],
[use_64bit="$enableval"],[use_64bit=yes])

if test "$use_64bit" = "yes"
then
AC_CHECK_PROG(ISAINFO, isainfo, yes, no, /usr/bin)
else
ISAINFO=no
fi
if test "$ISAINFO" = "yes" -a "$use_64bit" = "yes";
then 
    KARCH=`/usr/bin/isainfo -k`
else
    KARCH=`uname -p`
fi

IS_GNU_LD=`ld --version 2>&1 | grep  GNU`
if test "$GCC" = yes; then
	PTHREAD_CFLAGS="-pthreads"
else
	PTHREAD_CFLAGS="-mt"
fi

MAJOR_VERSION=`uname -r | cut -f 1 -d .`
MINOR_VERSION=`uname -r | cut -f 2 -d .`
if test "$MAJOR_VERSION" -ge 5  -a "$MINOR_VERSION" -ge 11 ; then
        CFLAGS="$CFLAGS -Iinc"
else
        echo "Not supported version: $MAJOR_VERSION.$MINOR_VERSION"
        exit
fi

case $KARCH in
     'sparc' | 'i386')
	;;
      'sparcv9')
	CFLAGS="$CFLAGS -m64"
	if test -n "$IS_GNU_LD";
	then
		LD_OPT="-melf64_sparc"
	fi
	;;
      'amd64')
	CFLAGS="$CFLAGS -m64"
	if test -n "$IS_GNU_LD";
	then
		LD_OPT="-melf_x86_64"
	fi
	;;
esac

AC_ARG_ENABLE(debug,
[  --enable-debug          Enable debuging],
   AC_DEFINE(DEBUG, 1)
)

AC_SUBST(CFLAGS)
AC_SUBST(LD_OPT)
AC_SUBST(CC)
AC_SUBST(CXX)
AC_SUBST(PTHREAD_CFLAGS)

AC_CONFIG_FILES([Makefile heapstat-test/Makefile])
AC_OUTPUT
